--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -199,14 +199,17 @@
     <ClCompile Include="class\GameObjects\Enemy\State\EscapeState.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Components\LockOn.cpp" />
     <ClCompile Include="class\GameObjects\Player\System\LeadingSystem.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\EnemyManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\WeaponSlot.cpp" />
     <ClCompile Include="class\GameObjects\UI\Weapon\WeaponUI.cpp" />
     <ClCompile Include="class\GameObjects\UI\UIManager.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\Test\TestEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Enemy\EnemyConfig.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\AttackState.h" />
     <ClInclude Include="class\GameObjects\Bullets\BulletManager.h" />
@@ -276,6 +279,8 @@
     <ClInclude Include="class\GameObjects\UI\Weapon\WeaponUI.h" />
     <ClInclude Include="class\GameObjects\UI\UIManager.h" />
     <ClInclude Include="class\GameObjects\Player\System\LeadingSystem.h" />
+    <ClInclude Include="class\GameObjects\Enemy\EnemyManager.h" />
+    <ClInclude Include="class\GameObjects\Enemy\Test\TestEnemy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
