sequenceノードのバグ修正

--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -165,7 +165,7 @@
     <ClCompile Include="class\GameObjects\Weapon\Gun\IGun.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\MachineGun\MachineGun.cpp" />
-    <ClCompile Include="class\GameObjects\Weapon\Gun\Missile\Missle.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\Gun\Missile\Missile.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\Rifle\Rifle.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\ShotGun\ShotGun.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Melee\IMelee.cpp" />
@@ -201,6 +201,7 @@
     <ClCompile Include="class\GameObjects\Weapon\Components\LockOn.cpp" />
     <ClCompile Include="class\GameObjects\Player\System\LeadingSystem.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\EnemyManager.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\Gunner\State\GunnerAttack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
@@ -208,6 +209,7 @@
     <ClCompile Include="class\GameObjects\UI\Weapon\WeaponUI.cpp" />
     <ClCompile Include="class\GameObjects\UI\UIManager.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\Test\TestEnemy.cpp" />
+    <ClCompile Include="class\GameObjects\Weapon\WeaponUtility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\GameObjects\Enemy\EnemyConfig.h" />
@@ -231,7 +233,7 @@
     <ClInclude Include="class\GameObjects\Weapon\Gun\IGun.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\MachineGun\MachineGun.h" />
-    <ClInclude Include="class\GameObjects\Weapon\Gun\Missile\Missle.h" />
+    <ClInclude Include="class\GameObjects\Weapon\Gun\Missile\Missile.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\Rifle\Rifle.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\ShotGun\ShotGun.h" />
     <ClInclude Include="class\GameObjects\Weapon\IWeapon.h" />
@@ -283,6 +285,8 @@
     <ClInclude Include="class\GameObjects\Player\System\LeadingSystem.h" />
     <ClInclude Include="class\GameObjects\Enemy\EnemyManager.h" />
     <ClInclude Include="class\GameObjects\Enemy\Test\TestEnemy.h" />
+    <ClInclude Include="class\GameObjects\Weapon\WeaponUtility.h" />
+    <ClInclude Include="class\GameObjects\Enemy\Gunner\State\GunnerAttack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
