--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -148,6 +148,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\GameObjects\Enemy\Drone\Drone.cpp" />
+    <ClCompile Include="class\GameObjects\Enemy\Drone\State\GunnerAttack.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\Gunner\Gunner.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\ChaseState.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\AttackState.cpp" />
@@ -212,6 +214,8 @@
     <ClCompile Include="class\GameObjects\Weapon\WeaponUtility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Enemy\Drone\Drone.h" />
+    <ClInclude Include="class\GameObjects\Enemy\Drone\State\GunnerAttack.h" />
     <ClInclude Include="class\GameObjects\Enemy\EnemyConfig.h" />
     <ClInclude Include="class\GameObjects\Enemy\Gunner\Gunner.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
