・当たり判定の実装をしてみたが動作確認が取れていない ・武器の解放を行う関数を作成 ・コピー元の武器の解放漏れを修正
次回やること
・敵管理クラスを武器管理クラスのような調整ができるようにする
・敵にレベルを設定できるようにして武器や身体機能の向上ができるようにする
・当たり判定の動作確認をする

--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -428,5 +428,8 @@
     <ClInclude Include="class\GameObjects\Weapon\WeaponManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="class\GameObjects\Collision\CollisionMask.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
