--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="class\GameObjects\Weapon\WeaponManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Collision\CollisionMask.h" />
     <ClInclude Include="class\GameObjects\Enemy\Drone\Drone.h" />
     <ClInclude Include="class\GameObjects\Enemy\EnemyConfig.h" />
     <ClInclude Include="class\GameObjects\Enemy\Gunner\Gunner.h" />
