--- a/resources/json/Launcher_UnCommon.json
+++ b/resources/json/Launcher_UnCommon.json
@@ -1,7 +1,7 @@
 {
     "Group :Bullet": {
-        "float :Num": 0.0,
-        "float :Speed": 1.0
+        "float :Speed": 1.0,
+        "int32_t :Num": 0
     },
     "Group :Interval": {
         "float :Burst": 0.0,
@@ -9,6 +9,8 @@
     },
     "float :AttackPower": 0.0,
     "float :CoolTime": 0.0,
-    "float :Store": 0.0,
+    "float :ReloadTime": 0.0,
+    "float :StoreTime": 0.0,
+    "int32_t :BurstNum": 0,
     "int32_t :Rarity": 1
 }
