--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -181,7 +181,7 @@
     <ClCompile Include="class\scene\Title.cpp" />
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\Actor\Actor.cpp" />
-    <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorHealth.cpp" />
+    <ClCompile Include="class\Componets\BehaviourTree\Actor\Health.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\Actor\ActorManager.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\Actor\BlackBoard.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\Melee\MeleeAttacker.cpp" />
@@ -257,7 +257,7 @@
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h" />
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes_internal.h" />
     <ClInclude Include="class\Componets\BehaviourTree\Actor\Actor.h" />
-    <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorHealth.h" />
+    <ClInclude Include="class\Componets\BehaviourTree\Actor\Health.h" />
     <ClInclude Include="class\Componets\BehaviourTree\Actor\ActorManager.h" />
     <ClInclude Include="class\Componets\BehaviourTree\Actor\BlackBoard.h" />
     <ClInclude Include="class\GameObjects\Enemy\Melee\MeleeAttacker.h" />
