・自機の武器練度実装 練度に応じて攻撃倍率を変動。上げ方は現在武器を使用したときに経験値を得られる状態。そのため、武器には攻撃時の経験値上昇量を設定できるようにした。

--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="class\GameObjects\Enemy\Test\TestEnemy.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\WeaponManager.cpp" />
     <ClCompile Include="class\GameObjects\Bullets\Melee\MeleeAttack.cpp" />
+    <ClCompile Include="class\GameObjects\Player\System\WeaponSkill\WeaponSkill.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\GameObjects\Enemy\Cargo\Cargo.h" />
@@ -304,6 +305,7 @@
     <ClInclude Include="class\GameObjects\Enemy\Test\TestEnemy.h" />
     <ClInclude Include="class\GameObjects\Weapon\WeaponManager.h" />
     <ClInclude Include="class\GameObjects\Bullets\Melee\MeleeAttack.h" />
+    <ClInclude Include="class\GameObjects\Player\System\WeaponSkill\WeaponSkill.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
