--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -169,6 +169,8 @@
     <ClCompile Include="class\GameObjects\Player\Actions\Action\None\NoneAction.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\MoveController.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\WeaponController.cpp" />
+    <ClCompile Include="class\GameObjects\UI\ScoreUI\ScoreManager.cpp" />
+    <ClCompile Include="class\GameObjects\UI\ScoreUI\ScoreUI.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Components\Magazine.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\IGun.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.cpp" />
@@ -244,6 +246,8 @@
     <ClInclude Include="class\GameObjects\Player\Actions\IActions.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\MoveController.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\WeaponController.h" />
+    <ClInclude Include="class\GameObjects\UI\ScoreUI\ScoreManager.h" />
+    <ClInclude Include="class\GameObjects\UI\ScoreUI\ScoreUI.h" />
     <ClInclude Include="class\GameObjects\Weapon\Components\Magazine.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\IGun.h" />
     <ClInclude Include="class\GameObjects\Weapon\Gun\Launcher\Launcher.h" />
