--- a/resources/json/Bullets/Launcher.json
+++ b/resources/json/Bullets/Launcher.json
@@ -4,7 +4,8 @@
         1.0,
         1.0
     ],
-    "float :AttackPower": 50.0,
-    "float :AttackSkillGain": 1.0,
-    "float :ElapsedTime": 1.0
+    "float :AttackPower": 1.0,
+    "float :ElapsedTime": 1.0,
+    "float :Speed": 1.0,
+    "int32_t :ImpactType": 1
 }
