--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,9 +150,10 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="class\GameObjects\Bullets\AttackBase.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Strategy\Movement\HomingMove.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Strategy\Impact\ExplosionImpact.cpp" />
+    <ClCompile Include="class\Componets\Input\Device\GamePadDevice.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\AttackBase.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Strategy\Movement\HomingMove.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Strategy\Impact\ExplosionImpact.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\Cargo\Cargo.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\DecoratorNode\RunOnce.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\LeafNode\ReadyToAttackLeaf.cpp" />
@@ -161,9 +162,9 @@
     <ClCompile Include="class\GameObjects\Enemy\Gunner\Gunner.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\ChaseState.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\AttackState.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\BulletManager.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Bullet\Bullet.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\BulletBase.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\AttackManager.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Bullet\Bullet.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\BulletBase.cpp" />
     <ClCompile Include="class\Componets\Math.cpp" />
     <ClCompile Include="class\Componets\Timer.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\ReadyToAttackState.cpp" />
@@ -214,7 +215,9 @@
     <ClCompile Include="class\GameObjects\Weapon\Components\LockOn.cpp" />
     <ClCompile Include="class\GameObjects\Player\System\LeadingSystem.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\EnemyManager.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Explosion\Explosion.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Explosion\Explosion.cpp" />
+    <ClCompile Include="class\Componets\Input\Device\KeyboardDevice.cpp" />
+    <ClCompile Include="class\Componets\Input\InputController.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
@@ -223,16 +226,19 @@
     <ClCompile Include="class\GameObjects\UI\UIManager.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\Test\TestEnemy.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\WeaponManager.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Melee\MeleeAttack.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Melee\MeleeAttack.cpp" />
     <ClCompile Include="class\GameObjects\Player\System\WeaponSkill\WeaponSkill.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Strategy\Movement\StraightMove.cpp" />
-    <ClCompile Include="class\GameObjects\Bullets\Strategy\Impact\NormalImpact.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Strategy\Movement\StraightMove.cpp" />
+    <ClCompile Include="class\GameObjects\Attack\Strategy\Impact\NormalImpact.cpp" />
+    <ClCompile Include="class\Componets\Input\VirtualController.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="class\GameObjects\Bullets\AttackBase.h" />
-    <ClInclude Include="class\GameObjects\Bullets\BulletConfig.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Movement\HomingMove.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Impact\ExplosionImpact.h" />
+    <ClInclude Include="class\Componets\Input\Device\GamePadDevice.h" />
+    <ClInclude Include="class\Componets\Input\InputConfig.h" />
+    <ClInclude Include="class\GameObjects\Attack\AttackBase.h" />
+    <ClInclude Include="class\GameObjects\Attack\AttackConfig.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Movement\HomingMove.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Impact\ExplosionImpact.h" />
     <ClInclude Include="class\GameObjects\Enemy\Cargo\Cargo.h" />
     <ClInclude Include="class\Componets\BehaviourTree\DecoratorNode\RunOnce.h" />
     <ClInclude Include="class\Componets\BehaviourTree\LeafNode\ReadyToAttackLeaf.h" />
@@ -243,9 +249,9 @@
     <ClInclude Include="class\GameObjects\Enemy\Gunner\Gunner.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\ChaseState.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\AttackState.h" />
-    <ClInclude Include="class\GameObjects\Bullets\BulletManager.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Bullet\Bullet.h" />
-    <ClInclude Include="class\GameObjects\Bullets\BulletBase.h" />
+    <ClInclude Include="class\GameObjects\Attack\AttackManager.h" />
+    <ClInclude Include="class\GameObjects\Attack\Bullet\Bullet.h" />
+    <ClInclude Include="class\GameObjects\Attack\BulletBase.h" />
     <ClInclude Include="class\Componets\Math.h" />
     <ClInclude Include="class\Componets\Timer.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\ReadyToAttackState.h" />
@@ -315,13 +321,17 @@
     <ClInclude Include="class\GameObjects\Enemy\EnemyManager.h" />
     <ClInclude Include="class\GameObjects\Enemy\Test\TestEnemy.h" />
     <ClInclude Include="class\GameObjects\Weapon\WeaponManager.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Melee\MeleeAttack.h" />
+    <ClInclude Include="class\GameObjects\Attack\Melee\MeleeAttack.h" />
     <ClInclude Include="class\GameObjects\Player\System\WeaponSkill\WeaponSkill.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Explosion\Explosion.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Movement\IMovement.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Movement\StraightMove.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Impact\IImpact.h" />
-    <ClInclude Include="class\GameObjects\Bullets\Strategy\Impact\NormalImpact.h" />
+    <ClInclude Include="class\GameObjects\Attack\Explosion\Explosion.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Movement\IMovement.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Movement\StraightMove.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Impact\IImpact.h" />
+    <ClInclude Include="class\GameObjects\Attack\Strategy\Impact\NormalImpact.h" />
+    <ClInclude Include="class\Componets\Input\VirtualController.h" />
+    <ClInclude Include="class\Componets\Input\Device\IInputDevice.h" />
+    <ClInclude Include="class\Componets\Input\Device\KeyboardDevice.h" />
+    <ClInclude Include="class\Componets\Input\InputController.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
